--- a/apps/_dashboard/templates/ticket.html
+++ b/apps/_dashboard/templates/ticket.html
@@ -1,9 +1,8 @@
 <html>
   <head>
     <base href="[[=URL('static')]]/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/future.css">
-    <link id="dashboard-theme" rel="stylesheet" href="themes/AlienDark/theme.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    <link rel="stylesheet" href="css/base.css">    <link rel="stylesheet" href="css/future.css">
+    <link id="dashboard-theme" rel="stylesheet" href="themes/[[= selected_theme or 'AlienDark' ]]/theme.css">
     <script src="js/theme-selector.js"></script>
     <style>
   * {
